# Waterbase

./: CMakeLists.txt  Dockerfile  build.sh  build_setup.sh
.devcontainer/: devcontainer.json
Waterbase/: CMakeLists.txt  Waterbase.cpp  Waterbase.h
WaterbaseClient/: CMakeLists.txt  WaterbaseClient.cpp
idl/: idl.capnp
